--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,11 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v3
+        
+      - name: install node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.17.0
 
       - name: install pnpm
         uses: pnpm/action-setup@v2.2.2
